# alfred

./: .gitignore  pyproject.toml  restart  start  start.py  start_clean
refinery/: passwords.json  paths.json  settings.json  versions.json
refinery/kratos/: kratos.yml
refinery/oathkeeper/: access-rules.yml  oathkeeper.yml
templates/: docker-compose.yml
util/: constants.py  docker_helper.py  postgres_helper.py  template_processor.py  update_helper.py
